--- a/stdlib/doc/stdlib/dune
+++ b/stdlib/doc/stdlib/dune
@@ -4,8 +4,7 @@
  (targets index-list.html)
  (deps
    make-library-index index-list.html.template hidden-files
-   (source_tree %{project_root}/theories)
-   (source_tree %{project_root}/user-contrib))
+   (source_tree %{project_root}/theories))
  (action
   (chdir %{project_root}
    ; On windows run will fail
@@ -14,7 +13,7 @@
 (rule
   (targets (dir html))
   (alias stdlib-html)
-  (package coq-doc)
+  (package coq-stdlib-doc)
   (deps
    ; This will be replaced soon by `theories/**/*.v` soon, thanks to rgrinberg
    (source_tree %{project_root}/theories)
@@ -22,12 +21,11 @@
    (:header %{project_root}/doc/common/styles/html/coqremote/header.html)
    (:footer %{project_root}/doc/common/styles/html/coqremote/footer.html)
    ; For .glob files, should be gone when Coq Dune is smarter.
-   (package coq-core)
    (package coq-stdlib))
  (action
   (progn
    (run mkdir -p html)
-   (bash "%{bin:coqdoc} -q -d html --with-header %{header} --with-footer %{footer} --multi-index --html -g -coqlib %{project_root} -R %{project_root}/theories Stdlib -Q %{project_root}/user-contrib/Ltac2 Ltac2 $(find %{project_root}/theories %{project_root}/user-contrib -name *.v)")
+   (bash "%{bin:coqdoc} -q -d html --with-header %{header} --with-footer %{footer} --multi-index --html -g -R %{project_root}/theories Stdlib $(find %{project_root}/theories -name *.v)")
    (run mv html/index.html html/genindex.html)
    (with-stdout-to
      _index.html
