--- a/plugins/derive/dune
+++ b/plugins/derive/dune
@@ -1,7 +1,7 @@
 (library
  (name derive_plugin)
  (public_name coq-core.plugins.derive)
- (synopsis "Coq's derive plugin")
+ (synopsis "Rocq's derive plugin")
  (libraries coq-core.vernac))
 
 (coq.pp (modules g_derive))
