--- a/plugins/syntax/dune
+++ b/plugins/syntax/dune
@@ -1,7 +1,7 @@
 (library
  (name number_string_notation_plugin)
  (public_name coq-core.plugins.number_string_notation)
- (synopsis "Coq number and string notation plugin")
+ (synopsis "Rocq number and string notation plugin")
  (modules g_number_string number_string)
  (libraries coq-core.vernac))
 
