--- a/plugins/btauto/dune
+++ b/plugins/btauto/dune
@@ -1,7 +1,7 @@
 (library
  (name btauto_plugin)
  (public_name coq-core.plugins.btauto)
- (synopsis "Coq's btauto plugin")
+ (synopsis "Rocq's btauto plugin")
  (libraries coq-core.plugins.ltac))
 
 (coq.pp (modules g_btauto))
