--- a/plugins/firstorder/dune
+++ b/plugins/firstorder/dune
@@ -1,14 +1,14 @@
 (library
  (name firstorder_core_plugin)
  (public_name coq-core.plugins.firstorder_core)
- (synopsis "Coq's first order logic solver plugin")
+ (synopsis "Rocq's first order logic solver plugin")
  (modules (:standard \ g_ground))
  (libraries coq-core.tactics))
 
 (library
  (name firstorder_plugin)
  (public_name coq-core.plugins.firstorder)
- (synopsis "Coq's first order logic solver plugin (Ltac1 syntax)")
+ (synopsis "Rocq's first order logic solver plugin (Ltac1 syntax)")
  (flags :standard -open Firstorder_core_plugin)
  (modules g_ground)
  (libraries coq-core.plugins.firstorder_core coq-core.plugins.ltac))
