--- a/plugins/ssr/dune
+++ b/plugins/ssr/dune
@@ -1,7 +1,7 @@
 (library
  (name ssreflect_plugin)
  (public_name coq-core.plugins.ssreflect)
- (synopsis "Coq's ssreflect plugin")
+ (synopsis "Rocq's ssreflect plugin")
  (modules_without_implementation ssrast)
  (flags :standard -open Gramlib)
  (libraries coq-core.plugins.ssrmatching))
