--- a/plugins/ssrmatching/dune
+++ b/plugins/ssrmatching/dune
@@ -1,7 +1,7 @@
 (library
  (name ssrmatching_plugin)
  (public_name coq-core.plugins.ssrmatching)
- (synopsis "Coq ssrmatching plugin")
+ (synopsis "Rocq ssrmatching plugin")
  (libraries coq-core.plugins.ltac))
 
 (coq.pp (modules g_ssrmatching))
