Rename all C functions and macros from the VM according to the Great Rocqification.

--- a/kernel/byterun/dune
+++ b/kernel/byterun/dune
@@ -1,6 +1,6 @@
 (library
  (name coqrun)
- (synopsis "Coq's Kernel Abstract Reduction Machine [C implementation]")
+ (synopsis "Rocq's Kernel Abstract Reduction Machine [C implementation]")
  (public_name coq-core.vm)
  (foreign_stubs
   (language c)
