--- a/checker/dune
+++ b/checker/dune
@@ -5,7 +5,7 @@
 (library
  (name coq_checklib)
  (public_name coq-core.checklib)
- (synopsis "Coq's Standalone Proof Checker")
+ (synopsis "Rocq's Standalone Proof Checker")
  (modules :standard \ coqchk votour)
  (wrapped true)
  (libraries coq-core.boot coq-core.kernel))
