add Zdiv_facts and more Z.modulo lemmas

--- a/doc/stdlib/index-list.html.template
+++ b/doc/stdlib/index-list.html.template
@@ -185,6 +185,7 @@ through the <tt>Require Import</tt> command.</p>
     theories/ZArith/Znumtheory.v
     theories/ZArith/Int.v
     theories/ZArith/Zpow_facts.v
+    theories/ZArith/Zdiv_facts.v
     theories/ZArith/Zbitwise.v
   </dd>
 
