--- a/Makefile.ci
+++ b/Makefile.ci
@@ -8,9 +8,41 @@
 ##         #     (see LICENSE file for the text of the license)         ##
 ##########################################################################
 
-CI_TARGETS= \
+CI_PLATFORM_FULL= \
     ci-itauto \
     ci-aac_tactics \
+    ci-bignums \
+    ci-coq_dpdgraph \
+    ci-coquelicot \
+    ci-corn \
+    ci-coqprime \
+    ci-elpi \
+    ci-hb \
+    ci-ext_lib \
+    ci-equations \
+    ci-flocq \
+    ci-coqhammer \
+    ci-hott \
+    ci-iris \
+    ci-math_classes \
+    ci-mathcomp \
+    ci-mathcomp_word \
+    ci-mczify \
+    ci-finmap \
+    ci-bigenough \
+    ci-analysis \
+    ci-menhir \
+    ci-mtac2 \
+    ci-paramcoq \
+    ci-quickchick \
+    ci-reduction_effects \
+    ci-relation_algebra \
+    ci-simple_io \
+    ci-stdlib \
+    ci-unicoq
+
+CI_TARGETS= \
+    $(CI_PLATFORM_FULL) \
     ci-argosy \
     ci-async_test \
     ci-atbr \
@@ -19,42 +51,29 @@ CI_TARGETS= \
     ci-bbv \
     ci-bedrock2 \
     ci-bedrock2_examples \
-    ci-bignums \
     ci-category_theory \
     ci-ceres \
     ci-coinduction \
     ci-color \
     ci-compcert \
-    ci-coq_dpdgraph \
     ci-coqtail \
-    ci-coquelicot \
     ci-coqutil \
-    ci-corn \
     ci-cross_crypto \
     ci-coq_lsp \
     ci-coq_performance_tests \
     ci-coq_tools \
-    ci-coqprime \
     ci-deriving \
-    ci-elpi \
     ci-elpi_test \
-    ci-hb \
     ci-hb_test \
     ci-engine_bench \
-    ci-ext_lib \
-    ci-equations \
     ci-equations_test \
     ci-fcsl_pcm \
     ci-fiat_crypto \
     ci-fiat_crypto_legacy \
     ci-fiat_crypto_ocaml \
     ci-fiat_parsers \
-    ci-flocq \
     ci-fourcolor \
-    ci-coqhammer \
-    ci-hott \
     ci-http \
-    ci-iris \
     ci-itree \
     ci-itree_io \
     ci-jasmin \
@@ -62,50 +81,36 @@ CI_TARGETS= \
     ci-kami \
     ci-lean_importer \
     ci-ltac2_compiler \
-    ci-math_classes \
-    ci-mathcomp \
     ci-mathcomp_test \
-    ci-mathcomp_word \
-    ci-mczify \
-    ci-finmap \
-    ci-bigenough \
-    ci-analysis \
-    ci-menhir \
     ci-metacoq \
-    ci-mtac2 \
     ci-neural_net_interp \
     ci-oddorder \
     ci-paco \
-    ci-paramcoq \
     ci-parsec \
     ci-perennial \
-    ci-quickchick \
     ci-quickchick_test \
-    ci-reduction_effects \
-    ci-relation_algebra \
+    ci-refman \
     ci-rewriter \
     ci-riscv_coq \
     ci-rupicola \
     ci-sf \
-    ci-simple_io \
     ci-smtcoq \
     ci-smtcoq_trakt \
     ci-stalmarck \
-    ci-stdlib \
     ci-stdlib_doc \
     ci-stdlib_test \
     ci-tactician \
     ci-tlc \
     ci-trakt \
     ci-unimath \
-    ci-unicoq \
     ci-verdi_raft \
     ci-vscoq \
     ci-vst \
     ci-waterproof
 
 CI_VIRTUAL_TARGETS= \
-    ci-elpi_hb
+    ci-elpi_hb \
+    ci-platform_full
 
 .PHONY: ci-all $(CI_TARGETS) $(CI_VIRTUAL_TARGETS)
 
@@ -244,9 +249,13 @@ ci-verdi_raft: ci-stdlib
 
 ci-waterproof: ci-stdlib
 
+ci-refman: ci-platform_full
+
 # Virtual targets used by the CI to group compilation of rules in a single job
 
 ci-elpi_hb: ci-elpi ci-hb
+
+ci-platform_full: $(CI_PLATFORM_FULL)
 
 # Generic rule, we use make to ease CI integration
 $(CI_TARGETS): ci-%:
