Rocq CLI prototype
Executable `rocq` can be called as `rocq compile args` (also `rocq c
args`) and will in turn call `coqworker --kind=compile
args`. (coqworker will be renamed later)

coqc has also been modified to call coqworker.

The design where `rocq` calls the worker executable instead of being
itself the worker executable is so that `rocq check` can work without
involving the main worker code.

We could also consider not having `rocq` handle `rocqchk` ie keeping
it completely separate.

TODO:

- make rocq handle coqtop mode
- make coqtop use the worker
- make rocq handle coqnative mode
- make coqnative use the worker(?)
- make rocq handle coqchk mode(?)
- make rocq handle misc modes (makefile, dep, doc, maybe tex, workmgr, votour?)
- make rocq handle coqidetop mode(?)
- make coqidetop use the worker(?) this would mean the worker depends
  on the xml protocol
- make rocq handle coqide mode(?)

Issues to be solved:

- (if coqtop.byte is to use the worker): figure out how to support
  coqtop.byte's extensions (dependency on coq-core.dev for printers,
  compiler-libs, findlib.top) without impacting worker.byte in non-coqtop
  modes

--- a/dev/dune
+++ b/dev/dune
@@ -22,7 +22,7 @@
   (deps
     dune-dbg.in
     ../checker/coqchk.bc
-    ../topbin/coqc_byte_bin.bc
+    ../topbin/coqworker_byte_bin.bc
     ../topbin/coqnative_bin.bc
     ../ide/coqide/rocqide_main.bc
     ../tools/coqdep/coqdep.bc
