--- a/topbin/dune
+++ b/topbin/dune
@@ -1,3 +1,23 @@
+(library
+ (name rocqshim)
+ (public_name coq-core.rocqshim)
+ (synopsis "Rocq support for finding and exec-ing subcommands")
+ (wrapped false) ; no point repeating the Rocqshim name
+ (modules rocqshim)
+ (libraries boot unix findlib))
+
+(executable
+ (public_name rocq)
+ (package coq-core)
+ (modules rocq)
+ (modes exe byte)
+ (libraries rocqshim))
+
+(install
+ (section bin)
+ (package coq-core)
+ (files (rocq.bc as rocq.byte)))
+
 (executable
  (name coqtop_bin)
  (public_name coqtop)
@@ -18,17 +38,7 @@
  (public_name coqc)
  (package coq-core)
  (modules coqc_bin)
- (libraries coq-core.toplevel))
- ; Adding -ccopt -flto to links options could be interesting, however,
- ; it doesn't work on Windows
-
-(executable
- (name coqc_byte_bin)
- (public_name coqc.byte)
- (package coq-core)
- (modules coqc_byte_bin)
- (libraries coq-core.toplevel)
- (modes byte))
+ (libraries rocqshim))
 
 (executable
  (name coqnative_bin)
@@ -42,7 +52,15 @@
 ; Workers
 (executable
  (name coqworker_bin)
- (public_name coqworker)
- (package coq-core)
  (modules coqworker_bin)
+ (modes exe byte)
  (libraries coq-core.toplevel))
+ ; Adding -ccopt -flto to links options could be interesting, however,
+ ; it doesn't work on Windows
+
+(install
+ (section libexec)
+ (package coq-core)
+ (files
+  (coqworker_bin.exe as coqworker)
+  (coqworker_bin.bc as coqworker.byte)))
