coq_makefile stop installing cmxs files in legacy location
Before this patch they get double installed in user-contrib and in
findlib's install directory. After this patch they only get installed
for findlib.

--- a/tools/CoqMakefile.in
+++ b/tools/CoqMakefile.in
@@ -395,8 +395,7 @@ FILESTOINSTALL = \
 	$(VOFILES) \
 	$(VFILES) \
 	$(GLOBFILES) \
-	$(NATIVEFILES) \
-	$(CMXSFILES)		# to be removed when we remove legacy loading
+	$(NATIVEFILES)
 FINDLIBFILESTOINSTALL = \
 	$(CMIFILESTOINSTALL)
 ifeq '$(HASNATDYNLINK)' 'true'
