--- a/.github/workflows/ci-macos.yml
+++ b/.github/workflows/ci-macos.yml
@@ -12,12 +12,17 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: homebrew outdated pkg-config fix
+        if: runner.os == 'Macos'
+        run: |
+          brew update
+          brew upgrade
+          brew install pkgconf
+          # work around https://github.com/actions/runner-images/issues/10984
+
       - name: Install system dependencies
         run: |
-          brew unlink pkg-config
-          brew install gnu-time opam gtksourceview3 adwaita-icon-theme expat libxml2 pkgconf
-          brew unlink pkgconf
-          brew link pkg-config
+          brew install gnu-time opam gtksourceview3 adwaita-icon-theme expat libxml2
 
       - name: Install OCaml dependencies
         run: |
