--- a/tools/coqdep/lib/dune
+++ b/tools/coqdep/lib/dune
@@ -1,5 +1,16 @@
 (library
  (name coqdeplib)
+ (public_name coq-core.coqdeplib)
  (libraries coq-core.boot coq-core.lib findlib.internal))
 
 (ocamllex lexer)
+
+(rule
+ (targets static_toplevel_libs.ml)
+ (deps %{project_root}/_build/install/%{context_name}/lib/coq-core/META)
+ (action
+  (with-stdout-to %{targets}
+   (run ocamlfind query -recursive -predicates native coq-core.toplevel
+        -prefix "let static_toplevel_libs = [\n"
+        -format "\"%p\";"
+        -suffix "\n]\n"))))
