--- a/tools/dune_rule_gen/dune
+++ b/tools/dune_rule_gen/dune
@@ -2,7 +2,7 @@
  (name coq_dune)
  (modules :standard \ gen_rules)
  (flags :standard -w +a-40-42)
- (libraries coqdeplib findlib))
+ (libraries coq-core.coqdeplib findlib))
 
 (executable
  (name gen_rules)
