Remove add_known_module in cctac.ml
It is not needed since the removal of legacy loading

(dune automatically generates Findlib.record_package calls for all
statically linked packages in an executable)

--- a/plugins/cc/dune
+++ b/plugins/cc/dune
@@ -3,7 +3,7 @@
  (public_name coq-core.plugins.cc_core)
  (synopsis "Rocq's congruence closure plugin")
  (modules (:standard \ g_congruence))
- (libraries coq-core.vernac))
+ (libraries coq-core.tactics))
 
 (library
  (name cc_plugin)
