--- a/test-suite/precomputed-time-tests/zero-before/time-of-build-after.log.in
+++ b/test-suite/precomputed-time-tests/zero-before/time-of-build-after.log.in
@@ -41,7 +41,7 @@ make -f Makefile.coq.noex
 make[3]: Nothing to be done for 'real-all'.
 make --no-print-directory -C coqprime src/Coqprime/PrimalityTest/Zp.vo
 make[1]: 'src/Coqprime/PrimalityTest/Zp.vo' is up to date.
-COQC src/UnsaturatedSolinasHeuristics/Tests.v
+ROCQ compile src/UnsaturatedSolinasHeuristics/Tests.v
 Finished transaction in 25.269 secs (24.869u,0.051s) (successful)
 src/UnsaturatedSolinasHeuristics/Tests.vo (real: 26.27, user: 25.97, sys: 0.27, mem: 566428 ko)
 DIFF Crypto.Fancy.Montgomery256.Prod.MontRed256
