Rename target stdlib-html -> corelib-html

--- a/.gitignore
+++ b/.gitignore
@@ -111,14 +111,14 @@ doc/faq/axioms.pdf_t
 doc/faq/axioms.png
 doc/sphinx/index.rst
 doc/sphinx/zebibliography.rst
-doc/stdlib/Library.out
-doc/stdlib/Library.ps
-doc/stdlib/Library.coqdoc.tex
-doc/stdlib/FullLibrary.ps
-doc/stdlib/FullLibrary.coqdoc.tex
-doc/stdlib/html/
-doc/stdlib/index-body.html
-doc/stdlib/index-list.html
+doc/corelib/Library.out
+doc/corelib/Library.ps
+doc/corelib/Library.coqdoc.tex
+doc/corelib/FullLibrary.ps
+doc/corelib/FullLibrary.coqdoc.tex
+doc/corelib/html/
+doc/corelib/index-body.html
+doc/corelib/index-list.html
 doc/tools/docgram/editedGrammar
 doc/tools/docgram/prodnGrammar
 doc/tools/docgram/prodnCommands
