--- a/doc/corelib/dune
+++ b/doc/corelib/dune
@@ -9,11 +9,11 @@
  (action
   (chdir %{project_root}
    ; On windows run will fail
-   (bash "doc/stdlib/make-library-index doc/stdlib/index-list.html doc/stdlib/hidden-files"))))
+   (bash "doc/corelib/make-library-index doc/corelib/index-list.html doc/corelib/hidden-files"))))
 
 (rule
   (targets (dir html))
-  (alias stdlib-html)
+  (alias corelib-html)
   (package coq-doc)
   (deps
    ; This will be replaced soon by `theories/**/*.v` soon, thanks to rgrinberg
@@ -27,7 +27,7 @@
  (action
   (progn
    (run mkdir -p html)
-   (bash "%{bin:coqdoc} -q -d html --with-header %{header} --with-footer %{footer} --multi-index --html -g -coqlib %{project_root} -R %{project_root}/theories Stdlib -Q %{project_root}/user-contrib/Ltac2 Ltac2 $(find %{project_root}/theories %{project_root}/user-contrib -name *.v)")
+   (bash "%{bin:coqdoc} -q -d html --with-header %{header} --with-footer %{footer} --multi-index --html -g -coqlib %{project_root} -R %{project_root}/theories Corelib -Q %{project_root}/user-contrib/Ltac2 Ltac2 $(find %{project_root}/theories %{project_root}/user-contrib -name *.v)")
    (run mv html/index.html html/genindex.html)
    (with-stdout-to
      _index.html
@@ -40,6 +40,6 @@
 ; _build/install/default/doc/coq-doc looks just right!
 
 (install
- (dirs (html as html/stdlib))
+ (dirs (html as html/corelib))
  (section doc)
  (package coq-doc))
