Add `rocq preprocess-mlg` subcommand (also pp-mlg)

--- a/topbin/dune
+++ b/topbin/dune
@@ -11,7 +11,8 @@
  (package rocq-runtime)
  (modules rocq)
  (modes exe byte)
- (libraries rocqshim))
+ ; we statically link the "small" subcommands instead of having separate binaries
+ (libraries rocqshim coqpp))
 
 (install
  (section bin)
